# cryostasis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.dev.txt  setup.py  tox.ini
.github/workflows/: build_wheels.yaml  pre-commit.yaml  tox.yaml
cryo/: __init__.py  _descriptor_helper.py
doc/: index.md  reference.md
doc/src/: conf.py  index.md
src/: _builtin_helpers.c
src/cryostasis/: __init__.py  detail.py
test/: .coveragerc  test_freeze.py
tests/: test_freeze.py
