[build-system]
requires = ["setuptools>=74.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cryostasis"
version = "0.0.1"
dependencies = []

[project.optional-dependencies]
test = ["pytest", "psutil"]
dev = ["cryostasis[test]", "build", "tox", "pytest-cov", "ruff"]

[[tool.setuptools.ext-modules]]
name = "cryostasis._builtin_helpers"
sources = ["src/_builtin_helpers.c"]
